Correct SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -11,9 +11,11 @@
   ],
   "routes": [
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/.*",
-      "dest": "/index.html",
-      "status": 200
+      "dest": "/index.html"
     }
   ],
   "buildCommand": "npm run build",
